[bug] Compact table further with truncating issue

--- a/src/components/Graphs/Table/style.css
+++ b/src/components/Graphs/Table/style.css
@@ -21,6 +21,6 @@ table tbody tr:hover {
 table th > div:nth-child(2) {
     margin-left: 1px !important;
     margin-right: 0px !important;
-    height: 12px !important;
-    width: 12px !important;
+    height: 10px !important;
+    width: 10px !important;
 }
